--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -7,7 +7,7 @@ common:
 config_paths:
   config_dir: ./config
   data_dir: ./data/
-  #simulation_path: /etc/crowdsec/config/simulation.yaml
+  simulation_path: ./config/simulation.yaml
   #hub_dir: /etc/crowdsec/hub/
   #index_path: ./config/hub/.index.json
 crowdsec_service:
@@ -25,11 +25,11 @@ db_config:
   port: 3306
 api:
   client:
-    credentials_path: ./client_secrets.yaml
+    credentials_path: ./config/client_secrets.yaml
   server:
     listen_uri: localhost:8080
     online_client: # Crowdsec API
-      credentials_path: ./lapi-secrets.yaml
+      credentials_path: ./config/lapi-secrets.yaml
 prometheus:
   enabled: true
   level: full
