--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -1,18 +1,35 @@
-working_dir: /tmp/
-data_dir: ${DATA}
-config_dir: ${CFG}
-pid_dir: ${PID}
-log_dir: /var/log/
-cscli_dir: ${CFG}/cscli
-simulation_path: ${CFG}/simulation.yaml
-log_mode: file
-log_level: info
-profiling: false
-apimode: true
-daemon: true
-prometheus: true
-#for prometheus agent / golang debugging
-http_listen: 127.0.0.1:6060
-plugin:
-  backend: "/etc/crowdsec/plugins/backend"
-  max_records_age: 720h
+common:
+  daemonize: false
+  pid_dir: ${PID}
+  log_media: ${LOG}
+  log_level: info
+  working_dir: ${PID}
+config_paths:
+  config_dir: ${CFG}
+  data_dir: ${DATA}
+  #simulation_path: /etc/crowdsec/config/simulation.yaml
+  #hub_dir: /etc/crowdsec/hub/
+  #index_path: /etc/crowdsec/hub/.index.json
+crowdsec_service:
+  #acquisition_path: ./config/acquis.yaml
+  parser_routines: 1
+cscli:
+  output: human
+db_config:
+  type: sqlite
+  db_path: ${DATA}/crowdsec.db
+  user: root
+  password: crowdsec
+  db_name: crowdsec
+  host: "172.17.0.2"
+  port: 3306
+api:
+  client:
+    credentials_path: ${CFG}/client_secrets.yaml
+  server:
+    listen_uri: localhost:8080
+    online_client: # Crowdsec API
+      credentials_path: ${CFG}/lapi-secrets.yaml
+prometheus:
+  enabled: true
+  level: full
